fixed contrast errors in footer

--- a/styles/base.css
+++ b/styles/base.css
@@ -140,6 +140,7 @@ footer {
     margin-top: 20px;
 
     background: rgb(90, 90, 147);
+    color: white;
     font-size: 20px;
 }
 
@@ -148,5 +149,6 @@ footer p {
 }
 
 #lastModified {
-    color: darkgray;
+    color: white;
+    font-size: 12px;
 }
